<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/single">

    <ScrollView
        android:id="@+id/scrollView_single_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/imageView_single_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="0dp"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/nu_back" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@color/multi"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:text="@string/pre_convert_setting"
                    android:textColor="#212121" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/select_a_emoji_for_converting"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/type_emoji_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:hint="@string/just_type_one_emoji"
                    android:inputType="textShortMessage"
                    android:maxLength="4"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    app:backgroundTint="@color/colorSecondary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@color/multi"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/emoji_size"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/type_emoji_size_single_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:hint="@string/default_is_28"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="@string/_28"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    app:backgroundTint="@color/colorSecondary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout_color_single_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@color/multi"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_background_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/image_background_color" />

                <TextView
                    android:id="@+id/comment_background_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/better_use_black_or_withe"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/red"
                    android:textColor="@android:color/holo_red_dark" />

                <com.warkiz.widget.IndicatorSeekBar
                    android:id="@+id/seek_red_single_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layoutDirection="ltr"
                    app:isb_indicator_color="@android:color/holo_red_dark"
                    app:isb_max="255"
                    app:isb_min="0"
                    app:isb_progress="0"
                    app:isb_thumb_color="@android:color/holo_red_dark"
                    app:isb_track_progress_color="@android:color/holo_red_dark" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/green"
                    android:textColor="@android:color/holo_green_dark" />

                <com.warkiz.widget.IndicatorSeekBar
                    android:id="@+id/seek_green_single_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layoutDirection="ltr"
                    app:isb_indicator_color="@android:color/holo_green_dark"
                    app:isb_max="255"
                    app:isb_min="0"
                    app:isb_progress="0"
                    app:isb_thumb_color="@android:color/holo_green_dark"
                    app:isb_track_progress_color="@android:color/holo_green_dark" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/blue"
                    android:textColor="@android:color/holo_blue_dark" />

                <com.warkiz.widget.IndicatorSeekBar
                    android:id="@+id/seek_blue_single_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layoutDirection="ltr"
                    app:isb_indicator_color="@android:color/holo_blue_dark"
                    app:isb_max="255"
                    app:isb_min="0"
                    app:isb_progress="0"
                    app:isb_thumb_color="@android:color/holo_blue_dark"
                    app:isb_track_progress_color="@android:color/holo_blue_dark" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@color/multi"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/brightness"
                    android:textColor="@android:color/black" />

                <com.warkiz.widget.IndicatorSeekBar
                    android:id="@+id/brightness_seek_single_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layoutDirection="ltr"
                    app:isb_max="150"
                    app:isb_min="40"
                    app:isb_progress="90" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/multi"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/resolution"
                    android:textColor="@android:color/black" />

                <com.warkiz.widget.IndicatorSeekBar
                    android:id="@+id/quality_seek_single_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layoutDirection="ltr"
                    app:isb_max="100"
                    app:isb_min="15"
                    app:isb_progress="60" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_open_single_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_yellow"
            android:text="@string/open" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_convert_single_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_yellow"
            android:enabled="false"
            android:text="@string/convert" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_save_single_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_yellow"
            android:enabled="false"
            android:text="@string/save" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>